syntax = "proto3";

option csharp_namespace = "Bpms.Domain.Proto";

service FormServiceGrpc {
  rpc CreateFormData (GrpcRequest) returns (ClientResponse);
}

message GrpcRequest {
  int32 FormId = 1;
  int32 nodeId = 2;
  string assigneeId = 3;
}

message ClientResponse {
  string FormDataId = 1;
}